# AscendNPU-IR

./: .gitignore  .gitmessage  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  README_zh.md  Third_Party_Open_Source_Software_Notice  tmp_load_bubble_up.mlir  tmp_load_bubble_up_from_revert_ut.mlir  tmp_to_be_supported.mlir  tmp_ub_bubble_up.mlir
bishengir/: .clang-format  .clang-tidy  CMakeLists.txt
bishengir/cmake/modules/: AddBiShengIR.cmake  BiShengIRVersion.cmake
bishengir/include/bishengir/: CMakeLists.txt  InitAllDialects.h  InitAllExtensions.h  InitAllPasses.h
bishengir/include/bishengir-c/: RegisterEverything.h
bishengir/include/bishengir-c/Dialect/: Annotation.h  HFusion.h  HIVM.h  Mesh.h
bishengir/include/bishengir/Analysis/: AscendAllocation.h  AscendUtility.h
bishengir/include/bishengir/Config/: bishengir-config.h.cmake
bishengir/include/bishengir/Conversion/: CMakeLists.txt  Passes.h  Passes.td
bishengir/include/bishengir/Dialect/: CMakeLists.txt
bishengir/include/bishengir/ExecutionEngine/: CMakeLists.txt  Passes.h  Passes.td
bishengir/include/bishengir/Interfaces/: AggregatedOpInterface.td  BiShengIRAttrs.td  CMakeLists.txt
bishengir/include/bishengir/Pass/: CPURunnerMetadata.h  PassManager.h
bishengir/include/bishengir/Transforms/: CMakeLists.txt  InjectIRInstrumentation.h  Passes.h  Passes.td  Transforms.h
bishengir/include/bishengir/Version/: Version.h  Version.inc.in
bishengir/lib/: CMakeLists.txt
bishengir/lib/Analysis/: AscendAllocation.cpp  AscendUtility.cpp  CMakeLists.txt
bishengir/lib/Bindings/Python/: AnnotationPasses.cpp  DialectHIVM.cpp  HFusionPasses.cpp  HIVMPasses.cpp  RegisterEverything.cpp
bishengir/lib/CAPI/Dialect/: Annotation.cpp  AnnotationPasses.cpp  CMakeLists.txt  HACC.cpp  HFusion.cpp  HFusionPasses.cpp  HIVM.cpp  HIVMPasses.cpp  Mesh.cpp
bishengir/lib/CAPI/RegisterEverything/: CMakeLists.txt  RegisterEverything.cpp
bishengir/lib/Conversion/: CMakeLists.txt
bishengir/lib/Conversion/ArithToAffine/: ArithToAffine.cpp
bishengir/lib/Conversion/ArithToHFusion/: ArithToHFusion.cpp  CMakeLists.txt
bishengir/lib/Conversion/ArithToHIVMAVE/: ArithToHIVMAVE.cpp  CMakeLists.txt
bishengir/lib/Conversion/ArithToHIVMLLVM/: CMakeLists.txt
bishengir/lib/Conversion/AscendDPXToHIVMRegbaseIntrins/: AscendDPXMathOpsLowering.cpp  AscendDPXToHIVMRegbaseIntrins.cpp  CMakeLists.txt
bishengir/lib/Conversion/FixCallUnknownLoc/: CMakeLists.txt  FixCallUnknownLoc.cpp
bishengir/lib/Conversion/FuncToLLVM/: CMakeLists.txt  FuncToLLVM.cpp
bishengir/lib/Conversion/GPUToDPX/: CMakeLists.txt  GPUOpToDPX.cpp
bishengir/lib/Conversion/GPUToHFusion/: CMakeLists.txt  GPUToHFusion.cpp
bishengir/lib/Conversion/HACCToLLVM/: CMakeLists.txt
bishengir/lib/Conversion/HFusionToHIVM/: CMakeLists.txt  HFusionToHIVM.cpp  Matmul.cpp  Reduction.cpp  Utils.cpp
bishengir/lib/Conversion/HFusionToVector/: CMakeLists.txt  HFusionToVector.cpp
bishengir/lib/Conversion/HIVMAVEToAVEIntrin/: HIVMAVEToAVEIntrin.cpp
bishengir/lib/Conversion/HIVMAVEToStandard/: HIVMAVEToStandard.cpp
bishengir/lib/Conversion/HIVMToStandard/: CMakeLists.txt  (+1 more)
bishengir/lib/Dialect/: CMakeLists.txt
bishengir/lib/ExecutionEngine/: BiShengIRRunnerUtils.cpp  CMakeLists.txt  ConvertHFusionToUpstream.cpp  ConvertHIVMToUpstream.cpp  CreateHostMain.cpp  ExecutionEnginePipelines.cpp
bishengir/lib/Pass/: PassManager.cpp  PassManagerOptions.cpp
bishengir/lib/Template/: CMakeLists.txt
bishengir/lib/Tools/: CMakeLists.txt
bishengir/lib/Transforms/: AffineMinMaxValueBounds.cpp  CMakeLists.txt  CanonicalizeModule.cpp  DeadFunctionElimination.cpp  DebugMemory.cpp  EliminateSingleIterationScfFor.cpp  ExtendedCanonicalizer.cpp  InjectIR.cpp  InjectIRInstrumentation.cpp  LowerToCPUBackend.cpp  Transforms.cpp
bishengir/python/: CMakeLists.txt
bishengir/python/bishengir/: bishengtile.py  debugging_capabilities.py  helper.py
bishengir/python/wheel/: README.md  pyproject.toml  setup.py
bishengir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
bishengir/test/CAPI/: CMakeLists.txt  pass.c
bishengir/test/ExecutionEngine/: convert-hivm-to-upstream-bitcast.mlir  convert-hivm-to-upstream.mlir  convert-hivm.mlir
bishengir/test/Pass/: cpu-runner.mlir  enable-drop-unit-dims.mlir  enable-flatten-mixed-cv.mlir  enable-flatten.mlir  enable-vf-vfsion.mlir  pass-manager.mlir  print-stacktrace-on-diagnostic.mlir  run-reproducer.mlir
bishengir/test/Transforms/: affine-min-max-value-bounds-coverage.mlir  arith-vector-mask-infer-mask-reuse.mlir  arith-vector-mask-infer-maskedload-maskedstore.mlir  arith-vector-mask-infer-transferread-transferwrite.mlir  canonicalize-module.mlir  data-layout-for-op.mlir  data-layout-infer-ascend310b4.mlir  data-layout-infer-ascend910d.mlir  debug-memory.mlir  inject-ir-from-file.mlir  inject-ir-using-pass-id.mlir  reuse-mask-in-same-block.mlir  scalar-broadcast-to-vload.mlir
bishengir/test/bishengir-compile/: commandline.mlir  lit.local.cfg  lower-to-llvm-e2e-with-target-tag.mlir  save-temps.mlir  simt-stack-limit.mlir  target.mlir
bishengir/test/bishengir-opt/: commandline.mlir  reorder_instruction_test.mlir
bishengir/test/mlir-opt/: commandline.mlir
bishengir/test/python/: bishengir_compile.py
bishengir/tools/bishengir-compile/: CMakeLists.txt  bishengir-compile.cpp
bishengir/tools/bishengir-hfusion-ods-gen/: bishengir-hfusion-ods-yaml-gen.cpp
bishengir/tools/bishengir-hivm-compile/: CMakeLists.txt  bishengir-hivm-compile.cpp
bishengir/tools/bishengir-lsp-server/: CMakeLists.txt  bishengir-lsp-server.cpp
bishengir/tools/bishengir-opt/: CMakeLists.txt  bishengir-opt.cpp
bishengir/tools/bishengir-options-tblgen/: CompileConfigGen.cpp  CompileOptionsGen.cpp  ConfigsToOptionsConversionGen.cpp  PassOptionsGen.cpp
bishengir/tools/bishengir-target-spec-tblgen/: TargetSpecGen.cpp  bishengir-target-spec-tblgen.cpp
bishengir/triton/: CMakeLists.txt
bishengir/triton/test/: lit.cfg.py
bishengir/unittests/: CMakeLists.txt
bishengir/unittests/Pass/: CMakeLists.txt  FilterPassesTest.cpp
(+2193 files in other folders)
