add_subdirectory(ArithToAffine)
add_subdirectory(ArithToHFusion)
add_subdirectory(ArithToHIVMAVE)
add_subdirectory(ArithToHIVMLLVM)
add_subdirectory(AscendDPXToHIVMRegbaseIntrins)
add_subdirectory(VectorToHIVMAVE)
add_subdirectory(HACCToLLVM)
add_subdirectory(FuncToLLVM)
add_subdirectory(GPUToHFusion)
add_subdirectory(HFusionToHIVM)
add_subdirectory(LinalgToHFusion)
add_subdirectory(LLVMCommon)
add_subdirectory(LowerMemRefExt)
add_subdirectory(LowerMesh)
add_subdirectory(MathToHFusion)
add_subdirectory(TensorToHFusion)
add_subdirectory(TensorToHIVM)
add_subdirectory(TritonAscendGPUToLLVM)
add_subdirectory(ProtonAscendGPUToLLVM)
add_subdirectory(HFusionToVector)
add_subdirectory(GPUToDPX)
add_subdirectory(HIVMAVEToAVEIntrin)
add_subdirectory(HIVMAVEToStandard)
add_subdirectory(HIVMToStandard)
add_subdirectory(HIVMToTritonGPU)

if(BISHENGIR_ENABLE_TORCH_CONVERSIONS)
  add_subdirectory(TorchToHFusion)
  add_subdirectory(TorchToSymbol)
endif()
